# MetaMotion

./: .gitignore  LICENSE  README.md  docker-compose.yml  podman-compose.yml  start_server.sh
WorkerDir/: watch.py
backend/: Dockerfile  requirements.txt
backend/backend/: settings.py  urls.py
backend/blender/: models.py  serializers.py  urls.py  views.py  watch.py
backend/blender/migrations/: 0001_initial.py  0003_alter_renderjob_otype.py
front-end/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
front-end/src/: App.tsx
server/: .gitignore
server/Cloud_Storage_(Testing)/: back_end.cjs
server/backend/: settings.py
server/blender/: serializers.py  views.py
server/blender/migrations/: 0002_renderjob_end_frame_renderjob_file_renderjob_otype_and_more.py  0003_alter_renderjob_otype.py  0004_alter_renderjob_progress.py
web/: tsconfig.json
web/src/: Render.tsx
worker/3d_Blade/src-tauri/connection/: execute_r.rs  file_manager.rs
worker/3d_Blade/src-tauri/tests/: Cargo.toml
worker/3d_Blade/src-tauri/tests/src/: main.rs
