[package]
name = "d_blade"
version = "0.0.0"
description = "A Tauri App"
authors = ["LMCHKT, CMINK"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.8"
tokio = "1.32.0"
gfx-hal = "0.9.0"
wgpu = "0.17.0"
nvml-wrapper = "0.9.0"
reqwest = "0.11.19"
zip = "0.6.6"
regex = "1.9.3"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
